--- a/fedoracommunity.org/data/templates/content-fpolinkback.html
+++ b/fedoracommunity.org/data/templates/content-fpolinkback.html
@@ -7,7 +7,7 @@
 <div class="clear">&nbsp;</div>
 <div class="grid_16 official-fp-link">
     <p>${_('There\'s more to Fedora. Visit the official Fedora project website at:')}</p>
-    <p><a href="http://www.fedoraproject.org">http://www.fedoraproject.org</a></p>
+    <p><a href="https://getfedora.org/">https://getfedora.org/</a></p>
 </div>
 <div class="clear"></div>
 <div class="prefix_4 grid_12">
