--- a/fedoracommunity.org/data/templates/footer.html
+++ b/fedoracommunity.org/data/templates/footer.html
@@ -25,7 +25,7 @@
         <div class="grid_3 sitelinks">
             <dl>
                 <dt>${_('Support')}</dt>
-                <dd><a href="http://fedoraproject.org/en/get-help">${_('Get Help')}</a></dd>
+                <dd><a href="https://fedoraproject.org/wiki/Communicating_and_getting_help">${_('Get Help')}</a></dd>
                 <dd><a href="irc://irc.freenode.org/#fedora">${_('IRC Help')}</a></dd>
                 <dd><a href="https://admin.fedoraproject.org/mailman/listinfo/users">${_('Mailing List Help')}</a></dd>
                 <dd><a href="http://ask.fedoraproject.org/">${_('Ask Fedora')}</a></dd>
@@ -36,7 +36,7 @@
         <div class="grid_3 sitelinks">
                 <dl>
                     <dt>${_('Join')}</dt>
-                    <dd><a href="http://fedoraproject.org/en/join-fedora">${_('Join Fedora')}</a></dd>
+                    <dd><a href="https://fedoraproject.org/wiki/Join">${_('Join Fedora')}</a></dd>
                     <dd><a href="http://fedoraproject.org/wiki/SIGs">${_('Fedora SIGs')}</a></dd>
                     <dd><a href="https://admin.fedoraproject.org/accounts/">${_('Fedora Account System')}</a></dd>
                     <dd><a href="http://www.fedoracommunity.org/">${_('Fedora Community')}</a></dd>
