--- a/fedoracommunity.org/data/templates/head.html
+++ b/fedoracommunity.org/data/templates/head.html
@@ -11,9 +11,9 @@
     <div class="grid_6">
         <div id="site-nav">
             <ul>
-                <li><a href="http://fedoraproject.org/">${_('Home')}</a></li>
-                <li><a href="http://fedoraproject.org/get-fedora">${_('Get Fedora')}</a></li>
-                <li><a href="http://fedoraproject.org/get-help">${_('Help')}</a></li>
+                <li><a href="https://getfedora.org/">${_('Home')}</a></li>
+                <li><a href="https://getfedora.org/">${_('Get Fedora')}</a></li>
+                <li><a href="https://ask.fedoraproject.org">${_('Help')}</a></li>
             </ul>
         </div>
     </div>
