add piwik everywhere
Signed-off-by: Ricky Elrod <ricky@elrod.me>

--- a/boot.fedoraproject.org/data/templates/js.html
+++ b/boot.fedoraproject.org/data/templates/js.html
@@ -4,4 +4,22 @@
   xmlns:xi="http://www.w3.org/2001/XInclude"
   py:strip="">
   <script type="text/javascript" src="http://fedoraproject.org/static/js/banner.js"></script>
+
+  <!-- Piwik -->
+  <script type="text/javascript">
+    var _paq = _paq || [];
+    _paq.push(["setDomains", ["*.boot.fedoraproject.org"]]);
+    _paq.push(['trackPageView']);
+    _paq.push(['enableLinkTracking']);
+    (function() {
+      var u="//piwik.fedorainfracloud.org/piwik/";
+      _paq.push(['setTrackerUrl', u+'piwik.php']);
+      _paq.push(['setSiteId', 7]);
+      var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+      g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+    })();
+  </script>
+  <noscript><p><img src="//piwik.fedorainfracloud.org/piwik/piwik.php?idsite=7" style="border:0;" alt="" /></p></noscript>
+  <!-- End Piwik Code -->
+
 </html>
