--- a/arm.fedoraproject.org/data/templates/js.html
+++ b/arm.fedoraproject.org/data/templates/js.html
@@ -35,14 +35,14 @@
       _paq.push(['trackPageView']);
       _paq.push(['enableLinkTracking']);
       (function() {
-        var u="//piwik.fedorainfracloud.org/piwik/";
+        var u="http://piwik.fedorainfracloud.org/piwik/";
         _paq.push(['setTrackerUrl', u+'piwik.php']);
         _paq.push(['setSiteId', 5]);
         var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
         g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
       })();
     </script>
-    <noscript><p><img src="//piwik.fedorainfracloud.org/piwik/piwik.php?idsite=5" style="border:0;" alt="" /></p></noscript>
+    <noscript><p><img src="http://piwik.fedorainfracloud.org/piwik/piwik.php?idsite=5" style="border:0;" alt="" /></p></noscript>
     <!-- End Piwik Code -->
 
 </html>
