update fudcon.fpo/LATAM with Puno event info

--- a/fudcon.fedoraproject.org/static/css/fudcon.css
+++ b/fudcon.fedoraproject.org/static/css/fudcon.css
@@ -417,6 +417,16 @@ img.center {
 	height:149px;
 }
 
+#column_one_puno {
+	width:214px;
+	height:200px;
+	background-image:url(../images/logo_puno_2016.jpg);
+	background-repeat:no-repeat;
+	padding-left:40px;
+	margin-top: 20px;
+	margin-left: 15px;
+}
+
 /*========================= SOCIAL LINE =============================*/
 
 .social_line_container {
