#404 update fudcon 2016 APAC

--- a/fudcon.fedoraproject.org/static/css/fudcon.css
+++ b/fudcon.fedoraproject.org/static/css/fudcon.css
@@ -427,6 +427,16 @@ img.center {
 	margin-left: 15px;
 }
 
+#column_one_pp {
+	width:260px;
+	height:200px;
+	background-image:url(../images/logo_phnompenh_2016.png);
+	background-repeat:no-repeat;
+	padding-left:20px;
+	margin-top: 20px;
+	margin-left: 40px;
+}
+
 /*========================= SOCIAL LINE =============================*/
 
 .social_line_container {
