--- a/flocktofedora.org/data/templates/head.html
+++ b/flocktofedora.org/data/templates/head.html
@@ -8,8 +8,8 @@
   <!-- Main Header -->
 
   <header>
-    <nav class="navbar navbar-default flock-navbar navbar-index" role="navigation">
-      <div class="container">
+    <nav class="navbar navbar-default flock-navbar navbar-index navbar-fixed-top" id="flocknav" role="navigation">
+      <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle pull-right" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -18,16 +18,17 @@
             <span class="icon-bar"></span>
           </button>
           <a id="index_menu" class="navbar-brand" href="/">
-            <img src="${path}/static/images/fedora-logo.png" />
+            <img src="${path}/static/images/flocklogo.png" height="40px"/>
           </a>
         </div>
         <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-	    <li><a href="https://register.flocktofedora.org"><i class="fa fa-users"></i> ${_('Register')}</a></li>
-            <li><a href="/about"><i class="fa fa-info-circle"></i> ${_('About')}</a></li>
-            <li><a href="/location"><i class="fa fa-map"></i> ${_('Location')}</a></li>
-            <li><a href="/sponsorship"><i class="fa fa-credit-card"></i> ${_('Sponsorship')}</a></li>
-            <li><a href="/schedule"><i class="fa fa-calendar"></i> ${_('Schedule')}</a></li>
+          <ul class="nav nav-pills navbar-right">
+	          <li><a href="#welcome">${_('Welcome')}</a></li>
+            <li><a href="#schedule"> ${_('Schedule')}</a></li>
+            <li><a href="#comms"> ${_('Comms')}</a></li>
+            <li><a href="#transport"> ${_('Transport')}</a></li>
+            <li><a href="#venue"> ${_('Venue')}</a></li>
+            <li><a href="#events"> ${_('Events')}</a></li>
           </ul>
         </div>
       </div>
