--- a/flocktofedora.org/static/css/flock.css
+++ b/flocktofedora.org/static/css/flock.css
@@ -1,37 +1,88 @@
+body{
+  position:relative;
+  margin-top:70px;
+}
+
 .flock-groupimg {
-  background: url('/static/images/index/groupimg.jpg') no-repeat left center fixed;
-  background-size: cover;
-  min-height: 415px;
+  background: url('/static/images/index/flower-background.png') repeat;
 }
 
-.flock-groupimg-content {
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 8px;
-  color: #f8f8f8;
-  margin-top: 30px;
-  padding: 10px;
-}
-
-.flock-groupimg-content h1, .flock-groupimg-content h2 {
-  padding: 0;
-  margin: 0;
-}
-
-.flock-groupimg-content h2 {
-  font-size: 20px;
-}
 
 .flock-navbar {
+    font-family: "Montserrat";
     background-color: #ffffff;
     border-bottom: 1px solid #ccc;
 }
 
-.flock-navbar .navbar-brand, .flock-navbar .navbar-nav li a {
-    line-height: 70px;
-    height: 70px;
-    padding-top: 0;
+.flock-navbar ul.nav {
+    margin-top:0.4em;
 }
 
 .navbar {
   margin-bottom: 0 !important;
+}
+
+.flock-info-item {
+  text-align: center;
+}
+.flock-info-item .fa {
+  font-size: 40px;
+}
+
+h1, h2, h3, h4, h5, h6
+{
+  font-family: Montserrat;
+}
+
+.jumbotron
+{
+  margin-bottom:0;
+}
+
+
+.large-icon{
+  color: white;
+background: #428bca none repeat scroll 0% 0%;
+width: 100px;
+margin-left: auto;
+margin-right: auto;
+border-radius: 100px;
+height: 100px;
+line-height: 100px;
+font-size: 50px;
+}
+
+.non-jumbo{
+  padding-top: 3em;
+  padding-bottom: 3em;
+}
+
+.non-jumbo p{
+  font-size: 1.3em;
+}
+
+
+.non-jumbo.blue{
+  background-color: #428bca;
+  color:white;
+}
+
+.non-jumbo.blue a
+{color: #444;}
+
+.non-jumbo.blue .large-icon{
+  background: white none repeat scroll 0% 0%;
+  color: #428bca;
+}
+
+hr
+{
+  margin: 3em;
+  border-top: 2px solid #428bca;
+}
+
+.blue hr
+{
+  border-top: 2px solid white;
+
 }
