flocktofedora: Add sponsors area

--- a/flocktofedora.org/data/templates/head.html
+++ b/flocktofedora.org/data/templates/head.html
@@ -29,6 +29,7 @@
             <li><a href="#transport"> ${_('Transport')}</a></li>
             <li><a href="#venue"> ${_('Venue')}</a></li>
             <li><a href="#events"> ${_('Events')}</a></li>
+            <li><a href="#sponsors"> ${_('Sponsors')}</a></li>
           </ul>
         </div>
       </div>
