--- a/flocktofedora.org/static/css/flock.css
+++ b/flocktofedora.org/static/css/flock.css
@@ -66,7 +66,7 @@ font-size: 50px;
 }
 
 .non-jumbo p{
-  font-size: 1.3em;
+  font-size: 1.1em;
 }
 
 
@@ -93,4 +93,9 @@ hr
 {
   border-top: 2px solid white;
 
+}
+
+#welcome
+{
+  padding-top: 1em;
 }
