added a photos section, and some photos from day 1

--- a/flocktofedora.org/data/templates/head.html
+++ b/flocktofedora.org/data/templates/head.html
@@ -30,6 +30,7 @@
             <li><a href="#venue"> ${_('Venue')}</a></li>
             <li><a href="#events"> ${_('Events')}</a></li>
             <li><a href="#sponsors"> ${_('Sponsors')}</a></li>
+            <li><a href="#photos"> ${_('Photos')}</a></li>
           </ul>
         </div>
       </div>
