we need more space in the header-icon

--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -937,6 +937,10 @@ p.warning a {
   margin-left: 10px;
 }
 
+.header-icon {
+  margin-right: 5px;
+}
+
 /*bootstrap xs*/
 @media max-width:767px
 {
