--- a/labs.fedoraproject.org/static/css/app.css
+++ b/labs.fedoraproject.org/static/css/app.css
@@ -775,6 +775,10 @@ p.warning a {
   margin-left: 10px;
 }
 
+.header-icon {
+  margin-right: 5px;
+}
+
 /*Export regulations*/
 .regulations-area {
   font-size: 13px;
