--- a/spins.fedoraproject.org/static/css/app.css
+++ b/spins.fedoraproject.org/static/css/app.css
@@ -770,6 +770,10 @@ p.warning a {
   margin-left: 10px;
 }
 
+.header-icon {
+  margin-right: 5px;
+}
+
 /*bootstrap sm*/
 @media(min-width:768px)
 {
