test out a first FMW concept

--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -1070,3 +1070,12 @@ img.pull-left { margin-right: 10px; }
 }
 /* end small screens classes */
 
+/* FMW */
+
+.modal{
+   overflow: visible !important;
+}
+
+#fwm .jumbotron h3 {
+  margin-top: 0;
+}
