--- a/getfedora.org/data/templates/js.html
+++ b/getfedora.org/data/templates/js.html
@@ -28,6 +28,11 @@
     <script type="text/javascript" src="${path}/static/js/jquery.uls.languagefilter.js"></script>
     <script type="text/javascript" src="${path}/static/js/jquery.uls.regionfilter.js"></script>
     <script type="text/javascript" src="${path}/static/js/jquery.uls.core.js"></script>
+
+    <!-- modernizr/detectizr -->
+    <script type="text/javascript" src="${path}/static/js/modernizr.js"></script>
+    <script type="text/javascript" src="${path}/static/js/detectizr.min.js"></script>
+
     <xi:include href="../templates/translations.html" />
 
     <!--[if lt IE 9]>
