--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -1072,10 +1072,45 @@ img.pull-left { margin-right: 10px; }
 
 /* FMW */
 
-.modal{
-   overflow: visible !important;
+#fmw .jumbotron h3 {
+  margin-top: 5px;
 }
 
-#fwm .jumbotron h3 {
-  margin-top: 0;
+#fmw .download {
+  height: 125px;
+}
+
+#fmw .download .btn {
+  margin-top: 35px;
+}
+
+#fmw .jumbotron {
+  padding-top: 10px;
+}
+
+#fmw .fedora {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+}
+
+#fmw .linux {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+}
+
+@media (max-width:530px)
+{
+    #fmw .jumbotron {
+      padding-top: 10px;
+      margin-top: 20px;
+  }
+    #fmw .download {
+      margin-top: 0px;
+  }
+    #fmw .linux {
+      margin-top: 5px;
+  }
 }
