add resources to the right side

--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -996,10 +996,12 @@ ul.list-spaces li{ margin-bottom:10px; }
 .top-margin { margin-top:20px; }
 .bottom-space { margin-bottom: 60px; }
 .bottom-margin { margin-bottom:20px; }
+.bottom-step { margin-bottom:10px; }
 .bottom-margin-edition { margin-bottom:40px; }
 .recover-heading { padding-bottom: 30px; } /* Recover the margin added by h1-h3 for even-ness. */
 .uppercase {text-transform: uppercase;}
 .liveusb {}
+.pull-right {margin-left: 10px;}
 
 img { max-width:100%; }
 img.pull-right { margin-left: 10px; }
