Initial go at FMW os detection
Signed-off-by: Ricky Elrod <ricky@elrod.me>

--- a/getfedora.org/data/templates/js.html
+++ b/getfedora.org/data/templates/js.html
@@ -33,6 +33,9 @@
     <script type="text/javascript" src="${path}/static/js/modernizr.js"></script>
     <script type="text/javascript" src="${path}/static/js/detectizr.min.js"></script>
 
+    <!-- FMW custom -->
+    <script type="text/javascript" src="${path}/static/js/fmw.js"></script>
+
     <xi:include href="../templates/translations.html" />
 
     <!--[if lt IE 9]>
