set color of download buttons to workstation green

--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -1084,6 +1084,11 @@ img.pull-left { margin-right: 10px; }
 
 #fmw .download .btn {
   margin-top: 35px;
+  background-color: #7BCF3E;
+}
+
+#fmw .linux .btn {
+  background-color: #7BCF3E;
 }
 
 #fmw .jumbotron {
