--- a/start.fedoraproject.org/static/css/app.css
+++ b/start.fedoraproject.org/static/css/app.css
@@ -83,7 +83,7 @@ img.header-icon {
 }
 
 .white img {
-	width: 80px;
+	width: 100px;
 	position: absolute;
 	margin-left: -8px;
 	margin-top: 7px;
@@ -229,5 +229,31 @@ li.right {
   	border-bottom: 2px solid #ccc;
     border-right: none;
   }
+
+  .white img {
+	width: 700px;
+	position: absolute;
+	margin-left: -8px;
+	margin-top: 7px;
+  }
+}
+
+@media (max-width: 1400px) {
+  .white img {
+	width: 80px;
+	position: absolute;
+	margin-left: -8px;
+	margin-top: 7px;
+  }
+}
+
+@media (max-width: 992px) {
+  .white img {
+	width: 60px;
+	position: absolute;
+	margin-left: -8px;
+	margin-top: 7px;
+  }
 }
 /* end small screens classes */
+
