add the hide/unhide functions for all FMW options to the download page

--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -1087,6 +1087,10 @@ img.pull-left { margin-right: 10px; }
   background-color: #7BCF3E;
 }
 
+#fmw .btn-success {
+  background-color: #7BCF3E;
+}
+
 #fmw .linux .btn {
   background-color: #7BCF3E;
 }
