add a dynamic download button for editions in the main page

--- a/getfedora.org/data/templates/js.html
+++ b/getfedora.org/data/templates/js.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="${path}/static/js/jquery.tweet.js"></script>
     <script type="text/javascript" src="${path}/static/js/sponsor.js"></script>
     <script type="text/javascript" src="${path}/static/js/init.js"></script>
+    <script type="text/javascript" src="${path}/static/js/edition.js"></script>
     <script type="text/javascript" src="${path}/static/js/openstack.js"></script>
     <script type="text/javascript" src="${path}/static/js/checksum.js"></script>
     <script type="text/javascript" src="${path}/static/js/bootstrap.min.js"></script>
