--- a/getfedora.org/data/templates/css.html
+++ b/getfedora.org/data/templates/css.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="${path}/static/css/app.css" />
     <link rel="stylesheet" type="text/css" href="${path}/static/css/font-awesome.css" />
     <link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=latin,latin-ext" />
-    <link rel='stylesheet' media="screen" href='https://fonts.googleapis.com/css?family=Montserrat' />
+    <link rel='stylesheet' media="screen" href='https://fonts.googleapis.com/css?family=Montserrat:400,700' />
 
     <!-- language selector -->
     <link rel="stylesheet" type="text/css" href="${path}/static/css/jquery.uls.css" />
