no text decoration for the main logo and download button

--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -696,6 +696,10 @@ text-align:center;
   font-weight: bolder;
 }
 
+.productitem a, .productitem a:hover {
+  text-decoration: none;
+}
+
 .productitem.workstation {
   background-image: url("../images/ws-main.png")
 }
