--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -724,8 +724,27 @@ text-align:center;
 
 .productdesc {
   background-color: none !important;
-  padding: 1em 3em;
-  text-align: left;
+  padding: 0;
+  text-align: center;
+}
+
+.productdesc h4 {
+  font-weight: bolder;
+  color: #60605b;
+  padding: 0 60px;
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+
+.productdesc-spacer hr {
+  color: #3c6eb4;
+  background-color: #3c6eb4;
+  width: 80px;
+  height: 4px !important;
+  text-align: center;
+  border: 0;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 /* end */
