--- a/getfedora.org/data/templates/cloud/header.html
+++ b/getfedora.org/data/templates/cloud/header.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="row product-header">
         <div class="col-xs-6 text-left">
-        <a href="${path}/${lang}/cloud/"><img class="productlogo hidden-xs" src="${path}/static/images/cloud-logo.png" alt="Fedora Cloud" /><img class="productlogo hidden-sm hidden-md hidden-lg" src="${path}/static/images/smalllogo-color-cloud.png" alt="Fedora Cloud" /></a>
+        <a href="${path}/${lang}/cloud/"><img class="productlogo hidden-xs" src="${path}/static/images/atomic-head-logo.png" alt="Fedora Atomic" /><img class="productlogo hidden-sm hidden-md hidden-lg" src="${path}/static/images/smalllogo-color-atomic.png" alt="Fedora Atomic" /></a>
         </div>
         <div class="col-xs-6 text-right">
         <a href="${path}/${lang}/"><img class="fedoralogotext" src="${path}/static/images/fedora-logotext.png" alt="Fedora Logo" /></a>
