add Camerons slogan and img-circle

--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -991,6 +991,10 @@ margin-top:20px;
   background: #eee;
 }
 
+#cloud .img-circle {
+  margin-top: 40px;
+}
+
 /*Pre-release page */
 .prerelease-header {
   width: 500px;
