add a first alt subpage with respective header template and images

--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -311,7 +311,9 @@ a.btn-lg {
 }
 
 .fedoralogotext {
-  margin-top: 18px;
+ height:49px;
+ width: 108px;
+ max-width: 108px;
 }
 
 .download-lower {
