add an alternate header - with some css more

--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -147,6 +147,31 @@ a.btn-lg {
   font-size: large;
 }
 
+#head .bluebox {
+  background-color: #3c6eb4;
+}
+
+#head .bluebox h2 {
+  color: #fff;
+  margin-top: 20px;
+}
+
+#head .bluebox h1 {
+  color: #fff;
+  margin-top: 50px;
+  padding-top: 30px;
+  font-family: "Montserrat";
+  font-weight: bolder;
+  font-size: 52px;
+}
+
+#head .bluebox p {
+  color: #fff;
+  text-align: center;
+  padding: 0 0 70px;
+  font-size: 22px;
+}
+
 .darkbluebox {
   background-color: #294172;
   color: #fff;
@@ -560,7 +585,7 @@ margin-top:4px;
 }
 
 .product-header, .fedora-header{
-  padding: 30px;
+  padding: 20px;
   color: #a7a9ac;
   font-weight: 400;
 }
