--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -172,6 +172,13 @@ a.btn-lg {
   font-size: 22px;
 }
 
+#head .bluebox .no-pad p {
+  color: #fff;
+  text-align: center;
+  padding: 0;
+  font-size: 22px;
+}
+
 .darkbluebox {
   background-color: #294172;
   color: #fff;
