add a @media instruction to reduce font size for laptops with 1366 width

--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -966,4 +966,10 @@ img.pull-left { margin-right: 10px; }
     margin: 0 auto;
   }
 }
+
+@media (max-width: 1380px) {
+  #head .bluebox h1 {
+    font-size: 44px;
+}
+}
 /* end small screens classes */
