--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -1238,5 +1238,11 @@ img.pull-left { margin-right: 10px; }
   }
 }
 
+@media (max-width: 1380px) {
+  .main-head-index h1 {
+    font-size: 44px;
+  }
+}
+
 /* Utility classes */
 .hidden { display: none; }
