update the get help info on alt.fpo

--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -303,6 +303,10 @@ a.btn-lg {
   text-align: left;
 }
 
+.whitesupport .help p {
+  text-align: center;
+}
+
 .widewrapper {
   width:100%;
   padding: 0;
