replace cloud references with atomic

--- a/getfedora.org/data/templates/productselector-cloud.html
+++ b/getfedora.org/data/templates/productselector-cloud.html
@@ -6,11 +6,11 @@
   py:strip="">
 
     <div class="h-body text-center product-box">
-      <div class="product-cloud">
-        <a class="greyscale" href="../cloud" alt="Fedora Cloud"></a>
-        <a class="color" href="../cloud" alt="Fedora Cloud"></a>
+      <div class="product-atomic">
+        <a class="greyscale" href="../atomic" alt="Fedora Atomic"></a>
+        <a class="color" href="../atomic" alt="Fedora Atomic"></a>
       </div>
-      <h4 class="productname uppercase">${_('Cloud')}</h4>
+      <h4 class="productname uppercase">${_('Atomic')}</h4>
       <p>${_('Lean. Powerful. Everycloud ready.')}</p>
     </div>
 
