--- a/alt.fedoraproject.org/data/templates/footer.html
+++ b/alt.fedoraproject.org/data/templates/footer.html
@@ -43,7 +43,7 @@
                             <dd><a href="//spins.fedoraproject.org">${_('Fedora Spins')}</a></dd>
                             <dd><a href="//labs.fedoraproject.org">${_('Fedora Labs')}</a></dd>
                             <dd><a href="//arm.fedoraproject.org">${Markup(_('Fedora ARM&lt;span class="sup"&gt;&reg;&lt;/span&gt;'))}</a></dd>
-                            <dd><a href="http://alt.fedoraproject.org/">${_('Alternative Downloads')}</a></dd>
+                            <dd><a href="//alt.fedoraproject.org/">${_('Alternative Downloads')}</a></dd>
                           </dl>
                         </div>
                     </div>
