--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -495,7 +495,6 @@ margin-top:4px;
 
 .main-head-index
 {
-    background-color: #294172;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -503,6 +502,8 @@ margin-top:4px;
     box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.05) inset;
     padding-top: 90px;
     padding-bottom: 100px;
+    background: rgba(0, 0, 0, 0) radial-gradient(ellipse at 50% 50% , #294172 15%, #233862 70%) repeat scroll 0 0;
+    text-align: center;    
 }
 
 .main-head-index h1
