fix link font color

--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -381,6 +381,11 @@ a.btn-lg {
   padding-right: 0px;
 }
 
+.white p.ec2 {
+  color: #428BCA;
+  font-weight: 600;
+}
+
 .white a {
   text-decoration: none;
 }
