--- a/alt.fedoraproject.org/data/templates/productselector-atomic.html
+++ b/alt.fedoraproject.org/data/templates/productselector-atomic.html
@@ -6,7 +6,7 @@
   py:strip="">
 
     <div class="h-body text-center product-box">
-      <div class="product-atomic text-center">
+      <div class="product-atomic">
         <a class="greyscale" href="https://getfedora.org/${lang}/atomic" alt="Fedora Atomic"></a>
         <a class="color" href="https://getfedora.org/${lang}/atomic" alt="Fedora Atomic"></a>
       </div>
