--- a/fedoracommunity.org/data/templates/footer.html
+++ b/fedoracommunity.org/data/templates/footer.html
@@ -18,8 +18,13 @@
         <div class="grid_3 sitelinks">
             <dl>
                 <dt>${_('Download')}</dt>
-                <dd><a href="http://fedoraproject.org/get-fedora">${_('Get Fedora')}</a></dd>
-                <dd><a href="http://fedoraproject.org/get-fedora-options">${_('Full Download List')}</a></dd>
+                <dd><a href="${path}/${lang}/workstation/download">${_('Get Fedora Workstation')}</a></dd>
+                <dd><a href="${path}/${lang}/server/download">${_('Get Fedora Server')}</a></dd>
+                <dd><a href="${path}/${lang}/atomic/download">${_('Get Fedora Atomic')}</a></dd>
+                <dd><a href="//spins.fedoraproject.org">${_('Fedora Spins')}</a></dd>
+                <dd><a href="//labs.fedoraproject.org">${_('Fedora Labs')}</a></dd>
+                <dd><a href="//arm.fedoraproject.org">${Markup(_('Fedora ARM&lt;span class="sup"&gt;&reg;&lt;/span&gt;'))}</a></dd>
+                <dd><a href="//alt.fedoraproject.org/">${_('Alternative Downloads')}</a></dd>
             </dl>
         </div>
         <div class="grid_3 sitelinks">
