--- a/fedoracommunity.org/data/templates/footer.html
+++ b/fedoracommunity.org/data/templates/footer.html
@@ -18,9 +18,9 @@
         <div class="grid_3 sitelinks">
             <dl>
                 <dt>${_('Download')}</dt>
-                <dd><a href="${path}/${lang}/workstation/download">${_('Get Fedora Workstation')}</a></dd>
-                <dd><a href="${path}/${lang}/server/download">${_('Get Fedora Server')}</a></dd>
-                <dd><a href="${path}/${lang}/atomic/download">${_('Get Fedora Atomic')}</a></dd>
+                <dd><a href="//getfedora.org/${lang}/workstation/download">${_('Get Fedora Workstation')}</a></dd>
+                <dd><a href="//getfedora.org/${lang}/server/download">${_('Get Fedora Server')}</a></dd>
+                <dd><a href="//getfedora.org/${lang}/atomic/download">${_('Get Fedora Atomic')}</a></dd>
                 <dd><a href="//spins.fedoraproject.org">${_('Fedora Spins')}</a></dd>
                 <dd><a href="//labs.fedoraproject.org">${_('Fedora Labs')}</a></dd>
                 <dd><a href="//arm.fedoraproject.org">${Markup(_('Fedora ARM&lt;span class="sup"&gt;&reg;&lt;/span&gt;'))}</a></dd>
