--- a/start.fedoraproject.org/static/css/app.css
+++ b/start.fedoraproject.org/static/css/app.css
@@ -6,7 +6,7 @@
 }
 
 .grey {
-	background-color: #f0f0f0;
+	background-color: #DEDEDE;
 	margin: 0 auto;
 	width: 100%;
 	color: #555;
@@ -17,7 +17,7 @@
 }
 
 .bluebox {
-	background-color: #3c6eb4;
+  background-color: #3c6eb4;
   height: 85px;
 }
 
@@ -35,6 +35,10 @@
 }
 
 /* Header doc */
+
+.border {
+  border-right: 2px solid rgba(255, 255, 255, 0.4);
+}
 
 .bluebox h3 {
   color: #ccc;
