--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -83,6 +83,45 @@ a.btn-lg {
   color: #fff;
 }
 
+/* Experts bubble */
+
+.experts {
+    background-color: #F2F2F2;
+    border-radius: 5px;
+    box-shadow: 0 0 6px #B2B2B2;
+    display: inline-block;
+    padding: 5px 11px;
+    position: relative;
+    vertical-align: top;
+}
+
+.experts::before {
+    background-color: #F2F2F2;
+    content: "\00a0";
+    display: block;
+    height: 12px;
+    position: absolute;
+    top: 9px;
+    transform:             rotate( 29deg ) skew( -35deg );
+        -moz-transform:    rotate( 29deg ) skew( -35deg );
+        -ms-transform:     rotate( 29deg ) skew( -35deg );
+        -o-transform:      rotate( 29deg ) skew( -35deg );
+        -webkit-transform: rotate( 29deg ) skew( -35deg );
+    width:  15px;
+}
+
+.sx {
+    float: left;
+    margin: 25px 5px 5px 15px;
+}
+
+.sx::before {
+    box-shadow: -2px 2px 2px 0 rgba( 178, 178, 178, .4 );
+    left: -8px;
+}
+
+/* end Experts bubble */
+
 /* Product Front Pages (General Classes) */
 
 .product-testimonial, .header-splash, .product-features
