start the alt prerelease page - head section

--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -239,6 +239,10 @@ a.btn-lg {
   font-size: 52px;
 }
 
+#head .prerelease h1 {
+  margin-bottom: 0px;
+}
+
 #head .bluebox p {
   color: #fff;
   text-align: center;
@@ -347,15 +351,15 @@ a.btn-lg {
 }
 
 .newsbox {
-  background-color: #ebb05d;
-  color: #000;
+  background-color: #a07cbc;
+  color: #fff;
   padding: 20px;
 }
 
 .newsbox h2,
 .newsbox h3 {
-  margin-top: 10px;
-  color: #000;
+  margin-top: 22px;
+  color: #fff;
 }
 
 .whitesupport {
