--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -958,6 +958,7 @@ h1.nopad, h2.nopad, h3.nopad, p.nopad { margin: 0 !important; padding: 0 !import
 blockquote { font-style: italic; color:#999; margin:30px 0 30px; }
 label { color: #777; }
 .thin { font-weight:300; }
+.alt-thin { font-weight:300; font-size:20px; margin-left:10px; }
 .page-title { margin-top:20px; font-weight:300; }
 .text-muted { color:#888; }
 .breadcrumb { background:none; padding:0; margin:30px 0 0px 0; }
