add prerelease Network Installers for desktop only

--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -959,6 +959,7 @@ blockquote { font-style: italic; color:#999; margin:30px 0 30px; }
 label { color: #777; }
 .thin { font-weight:300; }
 .alt-thin { font-weight:300; font-size:20px; margin-left:10px; }
+.prerelease-offer { background-color:#a07cbc; color:#fff; text-transform: uppercase; font-weight: bold; margin-left: 10px; font-size: 14px; padding: 2px; vertical-align: middle; }
 .page-title { margin-top:20px; font-weight:300; }
 .text-muted { color:#888; }
 .breadcrumb { background:none; padding:0; margin:30px 0 0px 0; }
