--- a/alt.fedoraproject.org/data/templates/js.html
+++ b/alt.fedoraproject.org/data/templates/js.html
@@ -3,15 +3,16 @@
   xmlns:py="http://genshi.edgewall.org/"
   xmlns:xi="http://www.w3.org/2001/XInclude"
   py:strip="">
-    <script type="text/javascript" src="${path}/static/js/jquery.min.js"></script>
     <script type="text/javascript" src="${path}/static/js/jquery.expander.js"></script>
     <script type="text/javascript" src="${path}/static/js/jquery.tools.min.js"></script>
     <script type="text/javascript" src="${path}/static/js/jquery.query.min.js"></script>
     <script type="text/javascript" src="${path}/static/js/jquery.slideshow.minified.js"></script>
     <script type="text/javascript" src="${path}/static/js/jquery.tweet.js"></script>
     <script type="text/javascript" src="${path}/static/js/init.js"></script>
-    <script type="text/javascript" src="${path}/static/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="${path}/static/js/regulations.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
     <script type="text/javascript" src="${path}/static/js/jquery.uls.data.js"></script>
 	  <script type="text/javascript" src="${path}/static/js/jquery.uls.data.utils.js"></script>
