--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -350,6 +350,11 @@ a.btn-lg {
   height: 50px;
 }
 
+.grey-hr {
+  background-image: url("../images/greybg.png");
+  height: 10px;
+}
+
 .newsbox {
   background-color: #a07cbc;
   color: #fff;
@@ -948,6 +953,29 @@ p.warning a {
   font-size: 20px;
   text-decoration: none;
   font-weight: 400;
+}
+
+.accordion-title {
+  color:#60605B;
+  font-size: 20px;
+}
+
+.accordion-title .download a {
+  color:#428BCA;
+  font-size: 16px !important;
+  font-weight: 600;
+}
+
+.panel-body .download {
+  position: relative;
+  float: right;
+  margin-top: 13px;
+  margin-right: 60px;
+  color:#A7A9AC;
+}
+
+.panel-body {
+  padding: 0 !important;
 }
 
 /*bootstrap xs*/
