add the newsbox on top and fix link

--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -367,6 +367,18 @@ a.btn-lg {
   color: #fff;
 }
 
+.newsbox .index h3 {
+  margin-top: 10px;
+  color: #fff;
+}
+
+.newsbox a,
+.newsbox a:hover,
+.newsbox a:active {
+  text-decoration: none;
+  color: #fff;
+}
+
 .whitesupport {
   background-color: #fff;
   color: #000;
