--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -967,6 +967,12 @@ p.warning a {
   font-weight: 400;
 }
 
+.panel-heading h3.visible-xs {
+  font-size: 18px;
+  text-decoration: none;
+  font-weight: 400;
+}
+
 .accordion-title {
   color:#60605B;
   font-size: 20px;
@@ -984,6 +990,19 @@ p.warning a {
   margin-top: 13px;
   margin-right: 60px;
   color:#A7A9AC;
+}
+
+.panel-body .mobile-download {
+  margin-top: 14px;
+  color:#A7A9AC;
+  float: right;
+  margin-right: 10px;
+}
+
+.accordion-title .mobile-download a {
+  color:#428BCA;
+  font-size: 14px !important;
+  font-weight: 600;
 }
 
 .panel-body {
@@ -1114,8 +1133,7 @@ img.pull-left { margin-right: 10px; }
   .white h3 { color: #60605b; margin: 4px 0px 2px; font-size: 18px; }
   .white p, .prewhite p { color: #a7a9ac; margin: 2px 0px 2px; font-weight: 400; text-align: left; padding: 2px 0px 2px; }
   .white p.download { font-size: 14px; margin-top: 2px; text-align: left; padding: 2px 0px 2px; }
-  .border { border: none;
-}
+  .border { border: none; }
 }
 
 @media (max-width: 991px) {
