even more mobile tweaks for alt.fpo

--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -1134,6 +1134,7 @@ img.pull-left { margin-right: 10px; }
   .white p, .prewhite p { color: #a7a9ac; margin: 2px 0px 2px; font-weight: 400; text-align: left; padding: 2px 0px 2px; }
   .white p.download { font-size: 14px; margin-top: 2px; text-align: left; padding: 2px 0px 2px; }
   .border { border: none; }
+  .panel-heading img { padding-right: 5px; }
 }
 
 @media (max-width: 991px) {
