--- a/getfedora.org/static/css/app.css
+++ b/getfedora.org/static/css/app.css
@@ -274,15 +274,27 @@ margin-top:4px;
 }
 
 .newsbox {
-  background-color: #ebb05d;
-  color: #000;
+  background-color: #a07cbc;
+  color: #fff;
   padding: 20px;
 }
 
 .newsbox h2,
 .newsbox h3 {
+  margin-top: 22px;
+  color: #fff;
+}
+
+.newsbox .index h3 {
   margin-top: 10px;
-  color: #000;
+  color: #fff;
+}
+
+.newsbox a,
+.newsbox a:hover,
+.newsbox a:active {
+  text-decoration: none;
+  color: #fff;
 }
 
 .product-box {
@@ -503,7 +515,7 @@ margin-top:4px;
     padding-top: 90px;
     padding-bottom: 100px;
     background: rgba(0, 0, 0, 0) radial-gradient(ellipse at 50% 50% , #294172 15%, #233862 70%) repeat scroll 0 0;
-    text-align: center;    
+    text-align: center;
 }
 
 .main-head-index h1
