--- a/getfedora.org/data/templates/footer.html
+++ b/getfedora.org/data/templates/footer.html
@@ -86,7 +86,7 @@
                         <div class="widget-body">
                             <p class="sponsor">${_('Fedora is sponsored by Red Hat.')}</p>
                             <p class="sponsor"><a href="//www.redhat.com/en/technologies/linux-platforms/articles/relationship-between-fedora-and-rhel">${_('Learn more about the relationship between Red Hat and Fedora &raquo;')}</a></p>
-                            <p class="copy">${_('&copy; %(year)s Red Hat, Inc. and others.') % {'year':'2017'}} ${Markup(_('Please send any comments or corrections to the &lt;a href="//fedorahosted.org/fedora-websites/"&gt;websites team&lt;/a&gt;.'))}</p>
+                            <p class="copy">${_('&copy; %(year)s Red Hat, Inc. and others.') % {'year':'2017'}} ${Markup(_('Please send any comments or corrections to the &lt;a href="//pagure.io/fedora-websites"&gt;websites team&lt;/a&gt;.'))}</p>
                         </div>
                     </div>
                     <div class="col-md-3">
