add a new prerelease verify page

--- a/alt.fedoraproject.org/static/css/app.css
+++ b/alt.fedoraproject.org/static/css/app.css
@@ -1063,6 +1063,7 @@ ul.list-spaces li{ margin-bottom:10px; }
 .recover-heading { padding-bottom: 30px; } /* Recover the margin added by h1-h3 for even-ness. */
 .uppercase {text-transform: uppercase;}
 .spin-download { padding: 40px 0px;}
+.no-top-padding {padding-top: 0px !important;}
 
 img { max-width:100%; }
 img.pull-right { margin-left: 10px; }
