add spins checksum files and fix paths again

--- a/spins.fedoraproject.org/static/css/app.css
+++ b/spins.fedoraproject.org/static/css/app.css
@@ -828,6 +828,7 @@ ul.list-spaces li{ margin-bottom:10px; }
 .uppercase {text-transform: uppercase;}
 .spin-download { padding: 40px 0px;}
 .recover-jumbo { padding: 30px 30px 20px;}
+.recover-head { padding-top: 60px; }
 
 img { max-width:100%; }
 img.pull-right { margin-left: 10px; }
