--- a/labs.fedoraproject.org/static/css/app.css
+++ b/labs.fedoraproject.org/static/css/app.css
@@ -848,6 +848,7 @@ ul.list-spaces li{ margin-bottom:10px; }
 .recover-heading { padding-bottom: 30px; } /* Recover the margin added by h1-h3 for even-ness. */
 .uppercase {text-transform: uppercase;}
 .spin-download { padding: 40px 0px;}
+.recover-head { padding-top: 60px; }
 
 img { max-width:100%; }
 img.pull-right { margin-left: 10px; }
