--- a/getfedora.org/data/templates/keys/key-button-and-modal.html
+++ b/getfedora.org/data/templates/keys/key-button-and-modal.html
@@ -30,7 +30,7 @@
              role="dialog"
              aria-labelledby="${shortid}-label"
              aria-hidden="true">
-          <div class="modal-dialog">
+          <div class="modal-dialog modal-lg">
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">
