[getfedora.org] add metadata for facebook and twitter
this adds a new image for use on social media sites
to promote getfedora.org. Also adds twitter cards and
OGP metadata for twitter and Facebook.

fixes #634

--- a/getfedora.org/data/templates/master.html
+++ b/getfedora.org/data/templates/master.html
@@ -9,6 +9,15 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
       <meta name="theme-color" content="#3c6eb4" />
+      <meta property="og:title" content="Get Fedora" />
+      <meta property="og:url" content="http://getfedora.org" />
+      <meta property="og:image" content="https://getfedora.org/static/images/fedora.png" />
+      <meta property="og:description" content="Choose Freedom. Choose Fedora. Pick a flavor of Fedora streamlined for your needs, and get to work right away." />
+      <meta name="twitter:card" content="summary_large_image"/>
+      <meta name="twitter:site" content="@fedora"/>
+      <meta name="twitter:title" content="Choose Freedom. Choose Fedora."/>
+      <meta name="twitter:description" content="Pick a flavor of Fedora streamlined for your needs, and get to work right away."/>
+      <meta name="twitter:image" content="https://getfedora.org/static/images/fedora.png"/>
       <link rel="shortcut icon" href="${path}/static/images/favicon.ico" />
         <xi:include href="css.html" />
         <meta py:replace="select('*|text()')" />
